v1.4/markdown/asct-b/asct-b-vh-kidney.md
# Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) table for Kidney v1.3

### Description
[Anatomical Structures, Cell Types, plus Biomarkers (ASCT+B) tables](https://hubmapconsortium.github.io/ccf/pages/ccf-anatomical-structures.html) aim to capture the nested *part_of* structure of anatomical human body parts, the typology of cells, and biomarkers used to identify cell types. The tables are authored and reviewed by an international team of experts. The kidney ASCT+B tables are generated from a variety of publicly available human kidney datasets and from data generated by HuBMAP and KPMP consortia.  Most of the markers listed are observed in more than one study or orthogonally validated.  Note that these are predicted markers and a single marker to annotate a cell type is not likely sufficient or specific. Therefore, these are just a guide, more accurate annotation should be done using the entire set of enriched genes in a cluster.  The cell types shown here are at much higher granularity, although general markers for many of the structures are also shown.  There is a tradeoff in uncertainty of cell type annotation with higher granularity and as spatial validation approaches become more robust we will be accordingly revising these.


| Label | Value |
| :------------- |:-------------|
| **Creator(s):** | Sanjay Jain; M. Todd Valerius; Yongqun He; Tarek El-Achkar; Michael Eadon; Jeffrey Spraggins |
| **Creator ORCID(s):** | [0000-0003-2804-127X](https://orcid.org/0000-0003-2804-127X); [0000-0001-8143-9231](https://orcid.org/0000-0001-8143-9231); [0000-0001-9189-9661](https://orcid.org/0000-0001-9189-9661); [0000-0003-4645-3614](https://orcid.org/0000-0003-4645-3614); [0000-0003-3066-2876](https://orcid.org/0000-0003-3066-2876); [0000-0001-9198-5498](https://orcid.org/0000-0001-9198-5498) |
| **Project Lead:** | Katy B&ouml;rner |
| **Project Lead ORCID:** | [0000-0002-3321-6137](https://orcid.org/0000-0002-3321-6137) |
| **Reviewer(s):** | Blue Lake; Nicki Bonevich; Rachel Dull; Ellen M. Quardokus; Daria Barwinska; Rajasree Menon
| **Reviewer ORCID(s):** |[0000-0002-8637-9044](https://orcid.org/0000-0002-8637-9044);[0009-0004-1272-6762](https://orcid.org/0009-0004-1272-6762); [0000-0002-0864-7007](https://orcid.org/0000-0002-0864-7007); [0000-0001-7655-4833](https://orcid.org/0000-0001-7655-4833); [0000-0002-0776-3030](https://orcid.org/0000-0002-0776-3030); [0000-0001-6280-9639](https://orcid.org/0000-0001-6280-9639) |
| **Creation Date:** | 2023-06-15|
| **License:** | Creative Commons Attribution 4.0 International ([CC BY 4.0](https://creativecommons.org/licenses/by/4.0/)) |
| **Publisher:** | HuBMAP |
| **Funder:** | National Institutes of Health |
| **Award Number:** | OT2OD026671 |
| **HuBMAP ID:** | HBM944.SVLH.825 |
| **Data Table:** | [Kidney v1.3](https://hubmapconsortium.github.io/ccf-releases/v1.4/asct-b/asct-b-vh-kidney.csv) |
| **DOI:** | [https://doi.org/10.48539/HBM944.SVLH.825](https://doi.org/10.48539/HBM944.SVLH.825) |
| **How to Cite This Data Table:** | Sanjay Jain; M. Todd Valerius; Yongqun He; Tarek El-Achkar; Michael Eadon; Jeffrey Spraggins, HuBMAP ASCT+B Tables. Kidney v1.3 [https://doi.org/10.48539/HBM944.SVLH.825](https://doi.org/10.48539/HBM944.SVLH.825) |
| **How to Cite ASCT+B Tables Overall:** | Quardokus, Ellen, Bruce W. Herr II, Lisel Record, Katy B&ouml;rner. 2023. [*HuBMAP ASCT+B Tables*](https://humanatlas.io/asctb-tables). Accessed on June 15, 2023. |
